docs/api/qiskit/0.33/qiskit.transpiler.synthesis.aqc.ApproximateCircuit.mdx
---
title: ApproximateCircuit
description: API reference for qiskit.transpiler.synthesis.aqc.ApproximateCircuit
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.synthesis.aqc.ApproximateCircuit
---

# ApproximateCircuit

<Class id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/transpiler/synthesis/aqc/approximate.py" signature="ApproximateCircuit(num_qubits, name=None)">
  Bases: `qiskit.circuit.quantumcircuit.QuantumCircuit`, `abc.ABC`

  A base class that represents an approximate circuit.

  **Parameters**

  *   **num\_qubits** (`int`) – number of qubit this circuit will span.
  *   **name** (`Optional`\[`str`]) – a name of the circuit.

  ## Methods Defined Here

  ### build

  <Function id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.build" name="build" signature="abstract ApproximateCircuit.build(thetas)">
    #### Constructs this circuit out of the parameters(thetas). Parameter values must be set before

    constructing the circuit.

    **Parameters**

    **thetas** (`ndarray`) – a vector of parameters to be set in this circuit.

    **Return type**

    `None`
  </Function>

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.

    **Return type**

    `List`\[`AncillaQubit`]
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.calibrations" name="calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}

    **Return type**

    `dict`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.

    **Return type**

    `List`\[`Clbit`]
  </Attribute>

  ### data

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.data" name="data">
    Return the circuit data (instructions and context).

    **Returns**

    a list-like object containing the tuples for the circuit’s data.

    Each tuple is in the format `(instruction, qargs, cargs)`, where instruction is an Instruction (or subclass) object, qargs is a list of Qubit objects, and cargs is a list of Clbit objects.

    **Return type**

    QuantumCircuitData
  </Attribute>

  ### extension\_lib

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.

    **Return type**

    `Union`\[`ParameterExpression`, `float`]
  </Attribute>

  ### header

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.instances" name="instances" attributeValue="= 9" />

  ### metadata

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.metadata" name="metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.

    **Return type**

    `dict`
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.

    **Return type**

    `int`
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.num_clbits" name="num_clbits">
    Return number of classical bits.

    **Return type**

    `int`
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.num_parameters" name="num_parameters">
    Convenience function to get the number of parameter objects in the circuit.

    **Return type**

    `int`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.num_qubits" name="num_qubits">
    Return number of qubits.

    **Return type**

    `int`
  </Attribute>

  ### parameters

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.parameters" name="parameters">
    Convenience function to get the parameters defined in the parameter table.

    **Return type**

    `ParameterView`
  </Attribute>

  ### prefix

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qubits

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.

    **Return type**

    `List`\[`Qubit`]
  </Attribute>

  ### thetas

  <Attribute id="qiskit.transpiler.synthesis.aqc.ApproximateCircuit.thetas" name="thetas">
    The property is not implemented and raises a `NotImplementedException` exception.

    **Return type**

    `ndarray`

    **Returns**

    a vector of parameters of this circuit.
  </Attribute>
</Class>

